# google-calendar-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: custom_auth.md
src/: main.rs
src/util/: auth.rs  calendar.rs  date.rs  file.rs  mod.rs
