[package]
name = "gcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
dirs = "5.0.1"
google-calendar3 = "6.0.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
