[package]
name = "gcal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
chrono-tz = "0.10.3"
clap = { version = "4.5.35", features = ["derive"] }
comfy-table = "7.1.4"
dirs = "6.0.0"
google-calendar3 = "6.0.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
